# yolo-training-wizard

./: .gitignore  README.md  classify_wizard.py  main.py  pyproject.toml  yolo_training_wizard.ipynb
utils/: convert_to_classification.py
