[project]
name = "yolo-training-wizard"
version = "0.1.0"
description = "CLI wizard for training YOLO models with Roboflow datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "roboflow>=1.3.7",
    "ultralytics>=8.4.46",
]

[project.scripts]
yolo-wizard = "main:main"
